Added beginning of CAML query to retrieve tasks.

--- a/RESTMVCWeb/Web.config
+++ b/RESTMVCWeb/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ClientId" value="b0e8776a-1e7b-4368-a41b-63e6561dc684" />
+    <add key="ClientId" value="b6aec061-1cc8-44a0-b26d-bdbe7c1caaab" />
     <add key="ClientSecret" value="lECZAbkVRe7AN6r5NTMqa2FQ3YQeMwNutq3If0bQ/60=" />
   </appSettings>
   <system.web>
@@ -41,11 +41,11 @@
       <!--Binding redirect for SharePoint Client Components assemblies-->
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.SharePoint.Client" publicKeyToken="71e9bce111e9429c" culture="neutral" />
-        <bindingRedirect oldVersion="15.0.0.0-16.0.0.0" newVersion="16.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-16.0.0.0" newVersion="16.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.SharePoint.Client.Runtime" publicKeyToken="71e9bce111e9429c" culture="neutral" />
-        <bindingRedirect oldVersion="15.0.0.0-16.0.0.0" newVersion="16.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-16.0.0.0" newVersion="16.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -62,4 +62,12 @@
       <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding" />
     </protocolMapping>
   </system.serviceModel>
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
 </configuration>
