--- a/RESTMVCWeb/RESTMVCWeb.csproj
+++ b/RESTMVCWeb/RESTMVCWeb.csproj
@@ -147,6 +147,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ContextHelper.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\WelcomeController.cs" />
     <Compile Include="Filters\SharePointContextFilterAttribute.cs" />
